--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/collectu-interface"]
-	path = src/collectu-interface
-	url = git@github.com:core4x/collectu-interface.git
+[submodule "src/interface"]
+	path = src/interface
+	url = git@github.com:core4x/interface.git
