fix: Removed unnecessary things.

--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 [env]
 # the persistent app id.
-app_id =
+app_id = c44c45f7-9488-4732-9ebd-42d354114595
 # the description of the app.
 app_description = My first collectu instance.
 # the filepath to the configuration file.
