fix: Minor improvements.

--- a/settings.ini
+++ b/settings.ini
@@ -2,7 +2,7 @@
 # the persistent app id.
 app_id =
 # the description of the app.
-app_description = My first collectu instance.
+app_description =
 # the filepath to the configuration file.
 config = configuration.yml
 # start the application in test mode.
