--- a/settings.ini
+++ b/settings.ini
@@ -2,7 +2,7 @@
 # the persistent app id.
 app_id =
 # the description of the app.
-app_description =
+app_description = 
 # the filepath to the configuration file.
 config = configuration.yml
 # start the application in test mode.
@@ -13,6 +13,10 @@ ignore_start_fail = 1
 auto_start = 1
 # automatically install third party requirements.
 auto_install = 1
+# automatically download modules from hub during first start.
+initial_download = 1
+# automatically download modules if they do not exist locally.
+auto_download = 1
 # start the api.
 api = 1
 # host address of the api.
@@ -32,8 +36,9 @@ url = 127.0.0.1
 # the host addresses of the motherships to report to.
 motherships = []
 # the api access token of the hub.
-hub_api_access_token =
+hub_api_access_token = 
 # use hub as mothership. a hub profile is required.
 report_to_hub = 1
 # send usage statistics.
 send_usage_statistics = 1
+
