--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ venv/
 # Docker volumes.
 volumes/
 
+# Modules
+src/modules/inputs/
+src/modules/outputs/
+src/modules/processors/
+
 # Byte-compiled / optimized / DLL files.
 __pycache__/
 *.py[cod]
