--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -22,7 +22,7 @@ requests==2.26.0
 six==1.16.0
 smmap==5.0.0
 tinydb==4.5.2
-typing-extensions==4.9.0
+typing_extensions==4.9.0
 urllib3==1.26.7
 waitress==2.0.0
 Werkzeug==2.0.2
