feat: Added custom_module_folder variable.

--- a/settings.ini
+++ b/settings.ini
@@ -41,4 +41,5 @@ hub_api_access_token =
 report_to_hub = 1
 # send usage statistics.
 send_usage_statistics = 1
-
+# your custom module folder located in modules.
+custom_module_folder =
