--- a/settings.ini
+++ b/settings.ini
@@ -35,6 +35,8 @@ frontend_port = 8282
 url = 127.0.0.1
 # the host addresses of the motherships to report to.
 motherships = []
+# the api access token of the hub.
+hub_api_access_token =
 # use hub as mothership. a hub profile is required.
 report_to_hub = 1
 # send usage statistics.
