feat: Initial commit of new API and frontend.
BREAKING CHANGE: Api has changed.

--- a/settings.ini
+++ b/settings.ini
@@ -23,10 +23,10 @@ api = 1
 api_host = 127.0.0.1
 # port of the api.
 api_port = 8181
+# is authentication required.
+api_authentication = 1
 # start the frontend.
 frontend = 1
-# the color mode, can be dark or light.
-color_mode = dark
 # host address of the frontend.
 frontend_host = 127.0.0.1
 # port of the frontend.
