--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,28 +1,34 @@
-aniso8601==9.0.1
-attrs==21.2.0
-certifi==2024.8.30
-charset-normalizer==2.0.9
-click==8.0.3
-colorama==0.4.4
-Flask==2.0.2
-Flask-Cors==3.0.10
-flask-restx==0.5.1
-gitdb==4.0.9
-GitPython==3.1.24
-idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-jsonschema==4.2.1
-Markdown==3.3.7
-MarkupSafe==2.0.1
-pyrsistent==0.18.0
-pytz==2021.3
-PyYAML==6.0.1
+annotated-types==0.7.0
+anyio==4.8.0
+babel==2.16.0
+blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+fastapi==0.115.7
+Flask==3.1.0
+flask-babel==4.0.0
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.14.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+Markdown==3.7
+MarkupSafe==3.0.2
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-multipart==0.0.20
+pytz==2024.2
+PyYAML==6.0.2
 requests==2.32.3
-six==1.16.0
-smmap==5.0.0
-tinydb==4.5.2
-typing_extensions==4.9.0
-urllib3==1.26.7
-waitress==2.0.0
-Werkzeug==2.0.2
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.45.3
+tinydb==4.8.2
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+waitress==3.0.2
+Werkzeug==3.1.3
