--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,7 @@ jobs:
         with:
           context: ./
           push: true
+          platforms: linux/amd64,linux/arm/v7
           tags: |
             ${{ steps.meta.outputs.tags }}
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
@@ -89,12 +90,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: collectu
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push Docker image to Docker Hub
-        run: |
-          docker build -t collectu/collectu-core:latest .
-          docker push collectu/collectu-core:latest
+        uses: docker/build-push-action@v5
+        with:
+          context: ./
+          push: true
+          platforms: linux/amd64,linux/arm/v7
+          tags: |
+            collectu/collectu-core:latest
+
