--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Test code, create release, and deploy Docker images
 on:
   push:
     branches: ['main']
+    tags: ['v*']
 
 env:
   REGISTRY: ghcr.io
@@ -16,7 +17,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Run multiple commands
+      - name: Run tests
         run: |
           cd src
           pip install -r requirements.txt
@@ -41,7 +42,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
   build-and-push-ghcr:
-    needs: execute-tests
+    needs: create-release
     if: success()
     runs-on: ubuntu-latest
     permissions:
@@ -50,49 +51,53 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
           platforms: all
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
           buildkitd-flags: --debug
+
       - name: Log in to GitHub Container Registry (GHCR)
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          flavor: |
-            latest=true
-          platforms: linux/amd64,linux/arm/v7
+          tags: |
+            type=semver,pattern={{version}}
+            type=raw,value=latest
+
       - name: Build and push Docker image to GHCR
         uses: docker/build-push-action@v5
         with:
           context: ./
           push: true
           platforms: linux/amd64,linux/arm/v7
-          tags: |
-            ${{ steps.meta.outputs.tags }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
       - name: Delete old versions
         uses: actions/delete-package-versions@v4
-        with: 
+        with:
           package-name: 'collectu-core'
           package-type: 'container'
           min-versions-to-keep: 3
           delete-only-untagged-versions: 'false'
 
   build-and-push-dockerhub:
-    needs: execute-tests
+    needs: create-release
     if: success()
     runs-on: ubuntu-latest
     permissions:
@@ -100,17 +105,21 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
           platforms: all
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: collectu
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push Docker image to Docker Hub
         uses: docker/build-push-action@v5
         with:
@@ -119,4 +128,3 @@ jobs:
           platforms: linux/amd64,linux/arm/v7
           tags: |
             collectu/collectu-core:latest
-
