--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
     tags: ['v*']
 
 env:
+  PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
@@ -59,9 +60,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver: docker-container
-          buildkitd-flags: --debug
 
       - name: Log in to GitHub Container Registry (GHCR)
         uses: docker/login-action@v3
@@ -84,7 +82,7 @@ jobs:
         with:
           context: ./
           push: true
-          platforms: linux/amd64,linux/arm/v7
+          platforms: ${{ env.PLATFORMS }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -125,6 +123,6 @@ jobs:
         with:
           context: ./
           push: true
-          platforms: linux/amd64,linux/arm/v7
+          platforms: ${{ env.PLATFORMS }}
           tags: |
             collectu/collectu-core:latest
