--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
             collectu/collectu-core
           tags: |
             type=semver,pattern={{version}}
-            type=semver,pattern=latest
+            type=raw,value=latest
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v5
