fix: Made mcp optional.

--- a/settings.ini
+++ b/settings.ini
@@ -21,6 +21,8 @@ api_host = 0.0.0.0
 api_port = 8181
 # is authentication required.
 api_authentication = 1
+# start the mcp server.
+mcp = 0
 # start the frontend.
 frontend = 1
 # host address of the frontend.
@@ -30,7 +32,7 @@ frontend_port = 80
 # the host addresses of the motherships to report to.
 motherships = []
 # the api access token of the hub.
-hub_api_access_token =
+hub_api_access_token = 
 # use hub as mothership. a hub profile is required.
 report_to_hub = 1
 # send usage statistics.
