feat: Added local admin user for authentication.

--- a/settings.ini
+++ b/settings.ini
@@ -21,6 +21,10 @@ api_host = 0.0.0.0
 api_port = 8181
 # is authentication required.
 api_authentication = 1
+# local admin username.
+collectu_local_admin_username = admin
+# local admin password.
+collectu_local_admin_password = platypus
 # start the mcp server.
 mcp = 0
 # start the frontend.
