--- a/settings.ini
+++ b/settings.ini
@@ -22,9 +22,9 @@ api_port = 8181
 # is authentication required.
 api_authentication = 1
 # local admin username.
-collectu_local_admin_username = admin
+local_admin_username = admin
 # local admin password.
-collectu_local_admin_password = platypus
+local_admin_password = platypus
 # start the mcp server.
 mcp = 0
 # start the frontend.
@@ -32,7 +32,7 @@ frontend = 1
 # host address of the frontend.
 frontend_host = 0.0.0.0
 # port of the frontend.
-frontend_port = 80
+frontend_port = 8282
 # the host addresses of the motherships to report to.
 motherships = []
 # the api access token of the hub.
