fix: Removed default password and auto-generate on start.

--- a/settings.ini
+++ b/settings.ini
@@ -24,7 +24,7 @@ api_authentication = 1
 # local admin username.
 local_admin_username = admin
 # local admin password.
-local_admin_password = platypus
+local_admin_password = 
 # start the mcp server.
 mcp = 0
 # start the frontend.
