feat: Added allowed commands to settings and reporting.

--- a/settings.ini
+++ b/settings.ini
@@ -43,4 +43,5 @@ report_to_hub = 1
 send_usage_statistics = 1
 # your custom module folder located in modules.
 custom_module_folder = 
-
+# comma-separated list of the allowed commands that will be executed if they are provided by the motherships or the hub.
+allowed_commands = restart,start,stop,update,load,save
